--- a/src/style.sass
+++ b/src/style.sass
@@ -1,6 +1,6 @@
 @import "./_variables"
 
-@mixin displayType($display,$justify,$align,$direction:column)
+@mixin displayType($display,$justify,$align,$direction)
   display: $display
   justify-content: $justify
   align-items: $align
@@ -9,6 +9,15 @@
   border: none
   padding: 0px
   background: transparent
+@mixin normalButton()
+  padding: .8rem 1.5rem
+  background: $primary-red
+  font-size: .75rem
+  color: white
+  border-radius: 2rem
+  border: none
+  font-weight: $strong-weight
+  box-shadow: 0px 5px 5px 0px transparentize($primary-red,0.75 )
 
 *
   box-sizing: border-box
@@ -16,11 +25,42 @@
   font-weight: $normal-weight
   font-size: $size
 
-header
+.header
   @include displayType(flex,space-between,center,row )
   padding: 2rem 1rem
-
-  button
+  .header__menu-button
     @include transparentButton()
     ion-icon
       color: $primary-darkBlue
+
+.main
+  @include displayType(flex,normal,center,column)
+  padding: 2rem 16px
+  .presentation
+    @include displayType(flex,normal,center,column)
+    width: 100%
+    .presentation__image-container
+      position: relative
+      width: 100%
+      .presentation__image
+        width: 100%
+    .presentation__bg
+      width: 125%
+      position: absolute
+      top: -10%
+      left: 25%
+      z-index: -1
+    .presentation__info-container
+      @include displayType(flex,normal,center,column)
+      width: 100%
+      text-align: center
+      .presentation__info-title
+        margin: .625rem 0rem
+        color: $primary-darkBlue
+      .presentation__info-description
+        color: $Neutral-grayBlue
+        font-weight: $light-weight
+        font-size: .875rem
+        line-height: 1.3rem
+      .presentation__info-button
+        @include normalButton()
