--- a/src/style.sass
+++ b/src/style.sass
@@ -35,12 +35,14 @@
 
 .main
   @include displayType(flex,normal,center,column)
-  padding: 2rem 16px
-  .presentation
+  padding: 1rem
+  section
     @include displayType(flex,normal,center,column)
     width: 100%
+    padding: 2rem 0rem
+  .presentation
+    padding: 0rem
     .presentation__image-container
-      position: relative
       width: 100%
       .presentation__image
         width: 100%
@@ -64,3 +66,55 @@
         line-height: 1.3rem
       .presentation__info-button
         @include normalButton()
+  .features
+    position: relative
+    .features__bg
+      position: absolute
+      width: 100%
+      z-index: -1
+      top: -80%
+      right: -70%
+    .features__info-container
+      @include displayType(flex,normal,center,column)
+      width: 100%
+      text-align: center
+      .features__info-title
+        margin: .625rem 0rem
+        font-size: 1.5rem
+        color: $primary-darkBlue
+        font-weight: $strong-weight
+      .features__info-description
+        color: $Neutral-grayBlue
+        font-weight: $light-weight
+        font-size: .875rem
+        line-height: 1.3rem
+    .features__items-container
+      @include displayType(flex,normal,center,column)
+      width: 100%
+      gap: 1rem
+      margin-top: 2rem
+      .features__item
+        @include displayType(flex,normal,flex-start,column)
+        width: 100%
+        .article__header-container
+          @include displayType(flex,normal,center,row)
+          width: 120%
+          gap: 1rem
+          background: $Neutral-red
+          border-radius: 2rem 0rem 0rem 2rem
+          .article__header-num
+            padding: .5rem 1rem
+            background: $primary-red
+            border-radius: 2rem
+            color: white
+          .article__header-title
+            margin: 0
+            font-size: .8125rem
+            font-weight: $strong-weight
+            color: $primary-darkBlue
+        .article__main-container
+          padding: .5rem 0rem
+          .article__main-description
+            color: $Neutral-grayBlue
+            font-size: .875rem
+            line-height: 1.75rem
