--- a/src/_variables.sass
+++ b/src/_variables.sass
@@ -8,7 +8,7 @@ $primary-darkBlue: hsl(228, 39%, 23%)
 $Neutral-grayBlue: hsl(227, 12%, 61%)
 $Neutral-darkBlue: hsl(233, 12%, 13%)
 $Neutral-red: hsl(13, 100%, 96%)
-$Netural-gray: hsl(0, 0%, 98%)
+$Neutral-gray: hsl(0, 0%, 98%)
 
 // Font
 $size: 16px
