--- a/src/style.sass
+++ b/src/style.sass
@@ -124,7 +124,7 @@ html,body
             line-height: 1.75rem
   .testimonials
     width: 100%
-    padding: 1rem
+    padding: 2rem 1rem
     gap: 5rem
     @include displayType(flex,normal,center,column)
     .testimonials-title
@@ -158,12 +158,12 @@ html,body
     .testimonials__button
       @include normalButton()
   .final
-    padding: 1rem
+    padding: 2rem 1rem
     text-align: center
     @include displayType(flex,normal,center,column)
     background: url("./assets/bg-simplify-section-mobile.svg") $primary-red no-repeat center left
     .final__title
-      font-size: 3rem
+      font-size: 2rem
       line-height: 3rem
       font-weight: $strong-weight
       color: white
@@ -171,3 +171,45 @@ html,body
       @include normalButton()
       color: $primary-red
       background: white
+.footer
+  @include displayType(flex,normal,center,column)
+  gap: 2rem
+  padding: 2rem 1rem
+  background-color: $Neutral-darkBlue
+  form
+    @include displayType(flex,center,center,row )
+    gap: 1rem
+    .footer__form-input
+      width: 70%
+      padding: .8125rem
+      height: 40px
+      border-radius: 2rem
+      border: none
+      outline: none
+      font-size: .8125rem
+    .footer__form-button
+      @include normalButton()
+      height: 40px
+  .footer__lists-container
+    @include displayType(flex,space-around,flex-start,row)
+    width: 100%
+    .footer__list-left,.footer__list-right
+      margin: 0
+      padding: 0
+      @include displayType(flex,normal,flex-start,column)
+      gap: 1rem
+      .list-item
+        list-style: none
+        font-size: 12px
+        color: $Neutral-gray
+        font-weight: $light-weight
+  .footer__social-container
+    width: 100%
+    @include displayType(flex,space-around,center,row)
+    .footer__social-item
+      @include transparentButton()
+      ion-icon
+        color: white
+  .footer__copy
+    color: $Neutral-grayBlue
+    font-size: .5rem
