--- a/src/style.sass
+++ b/src/style.sass
@@ -288,3 +288,92 @@ html,body
   .footer__copy
     color: $Neutral-grayBlue
     font-size: .5rem
+
+@include desktopView()
+  .header
+    padding: 5rem 10rem
+    .header__button
+      @include normalButton()
+    .header__button:hover
+      background: transparentize($primary-red,0.25)
+  .menu
+    position: absolute
+    justify-content: space-evenly
+    flex-direction: row
+    box-shadow: none
+    background: none
+    width: fit-content
+    .menu__button-close
+      display: none
+    .menu__list
+      flex-direction: row
+      gap: 1rem
+      .menu__list-item:hover
+        color: $Neutral-grayBlue
+  .main
+    .presentation
+      padding: 4rem
+      flex-direction: row-reverse
+      gap: 2rem
+      .presentation__image-container
+        width: 50%
+      .presentation__info-container
+        width: 40%
+        text-align: start
+        align-items: flex-start
+        gap: 1rem
+      .presentation__bg
+        width: 100%
+        top: -100%
+        left: 50%
+    .features
+      padding: 4rem 9rem
+      gap: 2rem
+      flex-direction: row
+      align-items: flex-start
+      .features__bg
+        top: 50%
+        right: 75%
+      .features__info-container
+        text-align: start
+        .features__info-title
+          font-size: 2rem
+        .features__info-description
+          font-size: 1rem
+      .features__items-container
+        .features__item
+          .article__header-container
+            width: 100%
+            background: none
+          .article__main-container
+            padding-left: 4rem
+    .testimonials
+      padding: 9rem
+      .testimonials__items-container
+        .testimonial__items-slider
+          .testimonial__item
+            min-width: 70%
+    .final
+      flex-direction: row
+      justify-content: space-evenly
+      background: url("./assets/bg-simplify-section-desktop.svg") $primary-red no-repeat
+      background-size: 130%
+      background-position: 0% 80%
+      .final__title
+        text-align: start
+        width: 40%
+  .footer
+    padding: 5rem
+    display: grid
+    gap: 0rem
+    grid-template-columns: 1fr 500px 1fr
+    grid-template-areas: "logo list form""social no copy"
+    form
+      grid-area: form
+    .footer__lists-container
+      grid-area: list
+    .footer__social-container
+      grid-area: social
+    .footer__copy
+      font-size: 1rem
+      grid-area: copy
