--- a/src/style.sass
+++ b/src/style.sass
@@ -334,6 +334,7 @@ html,body
       .features__bg
         top: 50%
         right: 75%
+        width: 50%
       .features__info-container
         text-align: start
         .features__info-title
