--- a/src/style.sass
+++ b/src/style.sass
@@ -25,6 +25,7 @@
   font-family: $family, sans-serif
   font-weight: $normal-weight
   font-size: $size
+  border: 1px solid red !important
 
 button,li
   cursor: pointer
@@ -334,6 +335,7 @@ html,body
       .features__bg
         top: 50%
         right: 75%
+        width: 50%
       .features__info-container
         text-align: start
         .features__info-title
